<resources>
    <string name="app_name">RPIST</string>
    <string name="action_settings">Settings</string>
    <string name="Information">List paired BlueTooth devices, then select one &amp; connect!...</string>
    <string name="ListDevices">List paired devices</string>
    <string name="ConnectDevice">Connect to device</string>
    <string name="ForwardButton">FORWARD</string>
    <string name="BackwardButton">BACKWARD</string>
    <string name="LeftButton">LEFT</string>
    <string name="RightButton">RIGHT</string>
    <string name="StopButton">STOP</string>
    <string name="UseSensors">Sensors\nmode</string>
    <string name="AvoidObstacles">Avoid\nobstacles</string>
    <string name="Stop">Stop</string>
    <string name="CameraOn">C</string>
    <string name="robot_address">Robot IP address:</string>
    <string name="camera_port">Camera port:</string>
    <string name="commands_port">Commands port:</string>
    <string name="data_port">Data port:</string>
    <string name="hint_robot_address">address</string>
    <string name="hint_camera_port">port</string>
    <string name="hint_commands_port">port</string>
    <string name="OkButton">OK</string>
    <string name="CancelButton">Cancel</string>
    <string name="MotorsOn">Motors</string>
    <string name="f1">Forward level 1</string>
    <string name="f2">Forward level 2</string>
    <string name="b1">Backward level 1</string>
    <string name="b2">Backward level 2</string>
    <string name="r1">Right level 1</string>
    <string name="r2">Right level 2</string>
    <string name="r3">Right level 3</string>
    <string name="l1">Left level 1</string>
    <string name="l2">Left level 2</string>
    <string name="l3">Left level 3</string>
    <string name="joystick">Joystick</string>

</resources>
